# src/main/java/com/dreamsportslabs/guardian/rest/BiometricChallenge.java
@@ -1,0 +1,40 @@
+package com.dreamsportslabs.guardian.rest;
+
+import static com.dreamsportslabs.guardian.constant.Constants.TENANT_ID;
+
+import com.dreamsportslabs.guardian.dto.request.BiometricChallengeRequestDto;
+import com.dreamsportslabs.guardian.service.BiometricService;
+import com.google.inject.Inject;
+import jakarta.validation.Valid;
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.HeaderParam;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.HttpHeaders;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+import java.util.concurrent.CompletionStage;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+
+@Slf4j
+@Path("/biometric/challenge")
+@RequiredArgsConstructor(onConstructor = @__({@Inject}))
+public class BiometricChallenge {
+  private final BiometricService biometricService;
+
+  @POST
+  @Consumes(MediaType.APPLICATION_JSON)
+  @Produces(MediaType.APPLICATION_JSON)
+  public CompletionStage<Response> requestChallenge(
+      @Context HttpHeaders headers,
+      @HeaderParam(TENANT_ID) String tenantId,
+      @Valid BiometricChallengeRequestDto requestDto) {
+    return biometricService
+        .generateChallenge(requestDto, tenantId)
+        .map(response -> Response.ok(response).build())
+        .toCompletionStage();
+  }
+}
